--- a/notebook/notebookapp/templates/pages/index.html
+++ b/notebook/notebookapp/templates/pages/index.html
@@ -33,10 +33,10 @@
 
         <h2>Create a new note</h2>
 
-        <form action='add/' method="POST">
+        <form action='add' method="POST">
             {% csrf_token %}
 
-			<input type="text" name="body"/><br/>
+			<input type="text" name="note"/><br/>
             <input type="submit" value="Send"/>
         </form>
     </body>
