--- a/notebook/notebookapp/templates/pages/index.html
+++ b/notebook/notebookapp/templates/pages/index.html
@@ -15,7 +15,7 @@
 
 
         <form action='/logout/' method="POST">
-			{% csrf_token %}
+		{% csrf_token %}
             <input type="submit" value="Logout"/>
         </form>
 		
@@ -33,8 +33,8 @@
 
         <h2>Create a new note</h2>
 
-        <form action='add' method="POST">
-            {% csrf_token %}
+        <form action='/notebookapp/add' method="POST">
+		<!-- {% csrf_token %} -->
 
 			<input type="text" name="note"/><br/>
             <input type="submit" value="Send"/>
